--- a/weatherapp/package.json
+++ b/weatherapp/package.json
@@ -23,6 +23,7 @@
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.4.0",
     "tslib": "^1.9.0",
+    "webpack": "^4.29.3",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
