--- a/angular.json
+++ b/angular.json
@@ -20,11 +20,10 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              "src/web.config"
+              "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css"   
             ],
             "scripts": [],
             "es5BrowserSupport": true
@@ -59,8 +58,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "weatherapp:build",
-            "proxyConfig": "proxy.config.json"
+            "browserTarget": "weatherapp:build"
           },
           "configurations": {
             "production": {
