--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "body-parser": "^1.18.3",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "jquery": "^3.4.0",
     "mongoose": "^5.4.11",
     "nodemon": "^1.18.10",
+    "popper.js": "^1.15.0",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.4.0",
     "tslib": "^1.9.0",
