--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/http": "^7.2.13",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
@@ -26,12 +27,10 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "jquery": "^3.4.0",
     "mongoose": "^5.4.11",
     "nodemon": "^1.18.10",
-    "popper.js": "^1.15.0",
-    "rxjs": "~6.3.3",
-    "rxjs-compat": "^6.4.0",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "tslib": "^1.9.0",
     "webpack": "^4.29.3",
     "zone.js": "^0.8.29"
