--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-session": "^1.15.6",
     "mongoose": "^5.4.11",
     "nodemon": "^1.18.10",
+    "request": "^2.88.0",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
     "tslib": "^1.9.0",
