--- a/4yearProjectBot-src/package.json
+++ b/4yearProjectBot-src/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "botbuilder": "^3.13.1",
     "botbuilder-azure": "^3.1.0",
     "dotenv-extended": "^1.0.4",
@@ -18,9 +19,7 @@
   "devDependencies": {
     "zip-folder": "^1.0.0"
   },
-  "scripts": {
-    "preinstall": "cd luis-actions && npm install"
-  },
+  "scripts": {},
   "author": "",
   "license": "ISC"
 }
